--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,12 @@
     <dimen name="android_standard_list_item">72dp</dimen>
 
     <dimen name="android_standard_list_item_padding">16dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
     <dimen name="android_standard_actionBarSize_inverted">-56.0dp</dimen>
 
+    <dimen name="text_size_medium">20sp</dimen>
+    <dimen name="text_size_medium_btn">14sp</dimen>
+
+
+    <dimen name="dp_22">22dp</dimen>
 </resources>
