--- a/app/src/main/res/layout/content_saved_places.xml
+++ b/app/src/main/res/layout/content_saved_places.xml
@@ -8,8 +8,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#FFEDEDED"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissplaces.ui.activities.SavedPlacesActivity"
     tools:showIn="@layout/activity_saved_places">
+    <android.support.v7.widget.RecyclerView
 
+        android:clickable="true"
+        android:focusable="true"
+        android:id="@+id/saved_places_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
