--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -7,7 +7,7 @@
             android:icon="@drawable/ic_list_white_48dp"
             android:title="@string/title_activity_history_tracks" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_mainmenu_saved_places"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/title_activity_saved_places" />
         <item
