--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="text_white">#FFFFFF</color>
+    <color name="text_gray">#757575</color>
+    <color name="text_dark_gray">#444</color>
+
     <color name="colorPrimaryDark">#FFAB00</color>
     <color name="colorPrimary">#FFC400</color>
     <color name="windowBackground">#FFF8E1</color>
