--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -31,7 +31,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--<include layout="@layout/content_google_map" />-->
+    <RelativeLayout
+        android:id="@+id/layout_map_switcher"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <include layout="@layout/mapzoomlayout" />
 
