--- a/dontmissstation/src/main/res/layout/activity_add_new_subway.xml
+++ b/dontmissstation/src/main/res/layout/activity_add_new_subway.xml
@@ -1,75 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:fitsSystemWindows="true"
     tools:context="svp.com.dontmissstation.ui.activities.AddNewSubwayActivity">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:text="@string/add_subway_city_country"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
-    <android.support.v7.widget.AppCompatEditText
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:text="@string/add_subway_city_name"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
-    <android.support.v7.widget.AppCompatEditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-        
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:text="@string/add_subway_city_subway_add_new_line"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <android.support.v7.widget.AppCompatTextView
-        android:text="@string/add_subway_city_subway_lines"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+    </android.support.design.widget.AppBarLayout>
 
-   <android.support.v7.widget.LinearLayoutCompat
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
-       <android.support.v7.widget.CardView
-           xmlns:card_view="http://schemas.android.com/apk/res-auto"
-           android:id="@+id/card_view"
-           android:layout_gravity="center"
-           android:layout_width="match_parent"
-           android:layout_height="100dp"
-           card_view:cardCornerRadius="4dp">
-           <android.support.v7.widget.LinearLayoutCompat
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="horizontal">
-               <ImageView
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:contentDescription="" />
-               <TextView
-                   android:text="Line A"
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent" />
-           </android.support.v7.widget.LinearLayoutCompat>
-       </android.support.v7.widget.CardView>
-
-   </android.support.v7.widget.LinearLayoutCompat>
+    <include layout="@layout/content_add_new_subway" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_subway_activity_save"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/zoom_fabbtn_top_margin"
+        android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
