--- a/dontmissstation/src/main/res/layout/content_add_new_subway.xml
+++ b/dontmissstation/src/main/res/layout/content_add_new_subway.xml
@@ -29,7 +29,7 @@
         android:id="@+id/label_city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/padding_above_and_below_text"
+        android:paddingTop="@dimen/android_standard_list_item_padding"
         android:text="@string/add_subway_city_name" />
 
     <android.support.v7.widget.AppCompatEditText
@@ -37,78 +37,51 @@
         android:layout_height="wrap_content"
         android:labelFor="@id/label_city" />
 
-    <Button
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/add_subway_city_subway_add_new_line" />
-
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/add_subway_city_subway_lines" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/android_standard_list_item_padding"
+        android:paddingBottom="@dimen/android_standard_list_item_padding">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            card_view:cardCornerRadius="1dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="@dimen/activity_vertical_margin">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription=""
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Line A" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <View
+        <LinearLayout
+            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="5dp" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            card_view:cardCornerRadius="1dp">
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="@string/add_subway_lines" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="@dimen/activity_vertical_margin">
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="@color/colorAccent"
+                android:text="(5)" />
+        </LinearLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription=""
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Line B" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+        <Button
+            android:id="@+id/add_new_subway_actv_addNewSubwayLine"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_subway_add_new_line" />
 
     </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:clickable="true"
+        android:focusable="true"
+        android:id="@+id/add_new_subway_actv_subwayLines"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_subway_activity_save"
