--- a/infrastructure/src/main/res/values/colors.xml
+++ b/infrastructure/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="text_white">#FFFFFF</color>
+    <color name="text_gray">#757575</color>
+    <color name="text_dark_gray">#444</color>
 </resources>
