--- a/infrastructure/src/main/res/values/dimens.xml
+++ b/infrastructure/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="padding_above_and_below_text">16dp</dimen>
+    <dimen name="android_standard_list_item_padding">16dp</dimen>
+
+    <dimen name="text_size_medium">20sp</dimen>
+    <dimen name="text_size_medium_btn">14sp</dimen>
 </resources>
