--- a/dontmissstation/src/main/res/layout/content_edit_subway_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/content_edit_subway_scrolling.xml
@@ -1,19 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+
+    android:id="@+id/activity_edit_subway_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissstation.ui.activities.EditSubwayScrollingActivity"
     tools:showIn="@layout/activity_edit_subway_scrolling">
 
-    <android.support.v7.widget.RecyclerView
-        android:clickable="true"
-        android:focusable="true"
-        android:id="@+id/add_new_subway_actv_subwayLines"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <!--
+    <android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_edit_subway_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-</android.support.v4.widget.NestedScrollView>
+    -->
+
+        <android.support.v7.widget.RecyclerView
+            android:clickable="true"
+            android:focusable="true"
+            android:id="@+id/add_new_subway_actv_subwayLines"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/activity_edit_subway_add_line_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@android:drawable/stat_sys_upload_done" />
+
+
+</android.support.design.widget.CoordinatorLayout>
