--- a/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="300dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -38,7 +38,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/add_subway_line_name" />
-
                 <android.support.v7.widget.AppCompatEditText
                     android:id="@+id/activity_edit_subway_line_name_edittext"
                     android:layout_width="match_parent"
@@ -66,6 +65,21 @@
                         android:background="@color/colorAccent"
                         />
                 </LinearLayout>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:paddingTop="@dimen/android_standard_list_item_padding"
+                    android:id="@+id/label_line_length"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_subway_line_length" />
+
+                <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/activity_edit_subway_line_length_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:labelFor="@id/label_line_length"
+                    android:inputType="numberDecimal"
+                    />
 
             </LinearLayout>
 
