--- a/dontmissstation/src/main/res/layout/activity_add_new_subway_line_template.xml
+++ b/dontmissstation/src/main/res/layout/activity_add_new_subway_line_template.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+    android:id="@+id/activity_add_new_subway_line_cardview"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:layout_gravity="center"
@@ -25,8 +25,10 @@
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold"
             android:background="@color/colorPrimary"
-            android:padding="2dp"
-            android:layout_weight="1"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="U3"/>
 
         <TextView
@@ -34,7 +36,7 @@
             android:id="@+id/activity_add_new_subway_line_template_startStation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_medium_btn"
+            android:textSize="@dimen/text_size_medium_btn_12sp"
             android:autoLink="web"
             android:clickable="true"
             android:textColor="@color/colorAccent"
@@ -49,7 +51,7 @@
             android:id="@+id/activity_add_new_subway_line_template_endStation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_medium_btn"
+            android:textSize="@dimen/text_size_medium_btn_12sp"
             android:autoLink="web"
             android:clickable="true"
             android:textColor="@color/colorAccent"
