--- a/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
@@ -58,6 +58,7 @@
                         android:text="@string/add_subway_line_color" />
 
                     <Button
+                        android:id="@+id/activity_edit_subway_line_change_color_dtn"
                         style="@style/Base.Widget.AppCompat.Button.Borderless"
                         android:layout_weight="1"
                         android:layout_width="50dp"
