--- a/dontmissstation/src/main/res/layout/subway_station_template.xml
+++ b/dontmissstation/src/main/res/layout/subway_station_template.xml
@@ -36,7 +36,10 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:background="@color/colorPrimary"
-            android:padding="2dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="U3"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
