--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -6,7 +6,7 @@
 
     https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=C9:F0:5B:CD:89:63:46:60:64:2F:84:0D:B7:E9:A1:51:12:30:8A:96%3Bsvp.com.dontmissplaces
 
-    You can also add your credentials to an existing key, using this line:
+    You can also draw your credentials to an existing key, using this line:
     C9:F0:5B:CD:89:63:46:60:64:2F:84:0D:B7:E9:A1:51:12:30:8A:96;svp.com.dontmissplaces
 
     Alternatively, follow the directions here:
