--- a/dontmissstation/src/main/res/layout/nav_header_main.xml
+++ b/dontmissstation/src/main/res/layout/nav_header_main.xml
@@ -19,6 +19,7 @@
         android:src="@android:drawable/sym_def_app_icon" />
 
     <TextView
+        android:id="@+id/activity_main_nav_header_subway_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
