--- a/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
+++ b/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="all">
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/main_activity_drawer_add_subways"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Subways" />
         <item
             android:icon="@drawable/ic_menu_camera"
             android:title="Route" />
