--- a/dontmissstation/src/main/res/layout/app_bar_main.xml
+++ b/dontmissstation/src/main/res/layout/app_bar_main.xml
@@ -24,12 +24,61 @@
     <include layout="@layout/content_main" />
     <include layout="@layout/mapzoomlayout" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_edit_apply_changes_fab"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/select_place_scrolling_act_content_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/zoom_fabbtn_top_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:background="@color/colorAccent"
+        android:gravity="bottom|center_horizontal"
+        android:orientation="vertical"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        <!-- action btns toolbar-->
+        <LinearLayout
+            android:id="@+id/main_action_btns_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/android_standard_toolbar_subtitle"
+            android:layout_gravity="top|fill_horizontal"
+
+            android:gravity="fill|fill_horizontal"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/track_recording_start_btn"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/ic_near_me_white_48dp" />
+
+            <ImageButton
+
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/route" />
+
+            <ImageButton
+                android:id="@+id/track_recording_show_place_info_btn"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_gps_fixed_white_48dp" />
+
+            <ImageButton
+                android:id="@+id/move_to_my_location"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_gps_fixed_white_48dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
