--- a/dontmissstation/src/main/res/layout/app_bar_main.xml
+++ b/dontmissstation/src/main/res/layout/app_bar_main.xml
@@ -22,24 +22,22 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
+
     <include layout="@layout/mapzoomlayout" />
 
     <LinearLayout
         android:id="@+id/select_place_scrolling_act_content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+
         android:gravity="bottom|center_horizontal"
         android:orientation="vertical"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
         <!-- action btns toolbar-->
         <LinearLayout
-            android:id="@+id/main_action_btns_toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/android_standard_toolbar_subtitle"
-            android:layout_gravity="top|fill_horizontal"
-
-            android:gravity="fill|fill_horizontal"
+            android:background="@color/colorAccent"
             android:orientation="horizontal">
 
             <ImageButton
@@ -77,8 +75,18 @@
                 android:layout_weight="1"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_gps_fixed_white_48dp" />
+
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/select_place_header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
+
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
