--- a/dontmissstation/src/main/res/layout/content_main.xml
+++ b/dontmissstation/src/main/res/layout/content_main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissstation.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
@@ -15,8 +13,7 @@
 
 
     <fragment
-        android:visibility="gone"
-        android:id="@+id/google_map"
+        android:id="@+id/activity_main_content_google_map"
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
