--- a/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
+++ b/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/main_activity_drawer_add_subways"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Subways" />
-        <item
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Route" />
-    </group>
     <group
         android:checkableBehavior="all"
         android:id="@+id/main_activity_nave_menu_lines_group">
 
+    </group>
+    <group android:checkableBehavior="single">
+        <item
+            android:orderInCategory="1"
+            android:id="@+id/main_activity_drawer_add_subways"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Subways"
+            android:checkable="false"/>
+        <item
+            android:orderInCategory="1"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Route" />
     </group>
 <!--
     <item android:title="Lines" >
