--- a/dontmissstation/src/main/res/menu/main.xml
+++ b/dontmissstation/src/main/res/menu/main.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/main_menu_action_search"
         android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        android:icon="@mipmap/ic_action_search"
+        app:actionViewClass="android.widget.SearchView"
+        android:title="action_search"/>
+    <item
+        android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
