--- a/dontmissstation/src/main/res/menu/activity_main_drawer_menu_general.xml
+++ b/dontmissstation/src/main/res/menu/activity_main_drawer_menu_general.xml
@@ -6,30 +6,19 @@
             android:id="@+id/main_activity_drawer_add_subways"
             android:icon="@drawable/ic_menu_camera"
             android:title="Subways" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+
         <item
             android:id="@+id/main_activity_drawer_add_new_subway"
             android:icon="@drawable/ic_menu_manage"
             android:title="Add new subway" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Other">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@drawable/ic_setting_light"
+                android:title="Settings" />
         </menu>
     </item>
 
