--- a/dontmissstation/src/main/res/layout/activity_edit_subway_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_edit_subway_scrolling.xml
@@ -61,7 +61,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/activity_route_toolbar_id"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
