--- a/dontmissstation/src/main/res/layout/content_edit_station.xml
+++ b/dontmissstation/src/main/res/layout/content_edit_station.xml
@@ -26,11 +26,18 @@
         android:labelFor="@id/label_station_name"
         />
 
-    <Spinner
+    <!--<Spinner-->
+        <!--android:id="@+id/activity_edit_subway_station_lines"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--/>-->
+    <LinearLayout
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:id="@+id/activity_edit_subway_station_lines"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/label_station_latitude"
