--- a/dontmissstation/src/main/res/layout/activity_list_subways_subway_item_template.xml
+++ b/dontmissstation/src/main/res/layout/activity_list_subways_subway_item_template.xml
@@ -28,8 +28,7 @@
             android:textColor="@color/text_gray"
             android:linksClickable="true"
             android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <LinearLayout
             android:id="@+id/activity_list_subways_subway_item_template_subway_lines"
