--- a/dontmissstation/src/main/res/layout/activity_pick_on_map.xml
+++ b/dontmissstation/src/main/res/layout/activity_pick_on_map.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +8,49 @@
     <fragment
         android:id="@+id/activity_pick_on_map_fragment_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="svp.com.dontmissstation.ui.activities.PickOnMapActivity" />
+        android:layout_height="match_parent"/>
 
     <include layout="@layout/mapzoomlayout" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/select_place_scrolling_act_content_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom|center_horizontal"
+        android:orientation="vertical"
+        android:layout_gravity="bottom">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/android_standard_toolbar_subtitle"
+            android:background="@color/colorAccent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/activity_pick_on_map_place_ok"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textColor="@color/text_white"
+                android:text="@string/_ok"
+                android:scaleType="fitCenter"/>
+            <View
+            android:background="@color/general_border_gray"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            />
+            <Button
+                android:id="@+id/activity_pick_on_map_place_cancel"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textColor="@color/text_white"
+                android:text="@string/_cancel"
+                android:scaleType="fitCenter"/>
+
+        </LinearLayout>
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
