--- a/dontmissstation/src/main/res/values/dimens.xml
+++ b/dontmissstation/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin_12dp">12dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_horizontal_marginX2">24dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
