--- a/dontmissstation/src/main/res/layout/content_edit_station.xml
+++ b/dontmissstation/src/main/res/layout/content_edit_station.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activities.EditSubwayStationActivity"
-    tools:showIn="@layout/activity_edit_station"
-    android:orientation="vertical">
+    tools:showIn="@layout/activity_edit_station">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/label_station_name"
@@ -23,56 +23,116 @@
         android:id="@+id/activity_edit_subway_station_name_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@id/label_station_name"
-        />
+        android:labelFor="@id/label_station_name" />
 
     <!--<Spinner-->
-        <!--android:id="@+id/activity_edit_subway_station_lines"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--/>-->
+    <!--android:id="@+id/activity_edit_subway_station_lines"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--/>-->
     <LinearLayout
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:id="@+id/activity_edit_subway_station_lines"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/label_station_latitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_subway_station_latitude" />
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/activity_edit_subway_station_latitude_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
-        android:labelFor="@id/label_station_latitude"
-        />
+        android:labelFor="@id/label_station_latitude" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/label_station_longitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_subway_station_longitude" />
+
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/activity_edit_subway_station_longitude_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@id/label_station_longitude"
         android:inputType="numberDecimal"
-        />
+        android:labelFor="@id/label_station_longitude" />
+
     <Button
         android:id="@+id/activity_edit_subway_station_pick_point_btn"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_gravity="end"
-        android:textColor="@color/text_white"
+        android:background="@color/colorAccent"
         android:text="Pick on map"
-        android:background="@color/colorAccent"/>
+        android:textColor="@color/text_white" />
 
+    <!--station from-->
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="2dp"
+        android:background="@color/text_white"
+        card_view:cardCornerRadius="0dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_vertical_margin">
+
+                <TextView
+                    android:id="@+id/activity_edit_subway_station_from_station_name_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="@dimen/activity_horizontal_margin_12dp"
+                    android:layout_weight="1"
+                    android:text="Heiligenstadt"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="@dimen/text_size_medium_btn" />
+
+                <LinearLayout
+                    android:id="@+id/activity_edit_subway_station_from_lines_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"></LinearLayout>
+            </LinearLayout>
+
+
+            <ImageButton
+                android:id="@+id/activity_add_new_subway_line_template_up_btn"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_arrow_upward_black_24dp" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+    <!--station to-->
 
 </LinearLayout>
