--- a/dontmissstation/src/main/res/layout/content_edit_station.xml
+++ b/dontmissstation/src/main/res/layout/content_edit_station.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -75,8 +75,9 @@
         android:textColor="@color/text_white" />
 
     <ListView
+        android:scrollbars="none"
         android:id="@+id/activity_edit_subway_station_connect_stations"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent">
     </ListView>
 
