--- a/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
+++ b/dontmissstation/src/main/res/menu/activity_main_drawer_menu_selected_subway.xml
@@ -13,6 +13,7 @@
             android:title="Subways"
             android:checkable="false"/>
         <item
+            android:id="@+id/main_activity_drawer_route"
             android:orderInCategory="1"
             android:icon="@drawable/ic_menu_camera"
             android:title="Route" />
