--- a/dontmissstation/src/main/res/layout/activity_edit_subway_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_edit_subway_scrolling.xml
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
+        android:src="@drawable/ic_done_white_24dp"
         app:layout_anchor="@id/activity_route_app_bar"
         app:layout_anchorGravity="bottom|end" />
 
@@ -90,6 +90,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/stat_sys_upload_done" />
+        android:src="@drawable/ic_add_white_48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
